# shroudb-scroll

./: .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  ENGINE_DAG.md  LICENSE  README.md  SPEC.md  TODOS.md  protocol.toml
.github/workflows/: release.yml
shroudb-scroll-cli/: Cargo.toml
shroudb-scroll-cli/src/: main.rs
shroudb-scroll-client/: Cargo.toml
shroudb-scroll-client/src/: connection.rs  error.rs  lib.rs
shroudb-scroll-core/: Cargo.toml
shroudb-scroll-core/src/: audit.rs  dlq.rs  entry.rs  error.rs  group.rs  lib.rs  ops.rs  pending.rs
shroudb-scroll-engine/: Cargo.toml
shroudb-scroll-engine/src/: capabilities.rs  crypto.rs  engine.rs  groups.rs  keys.rs  lib.rs  meta.rs  offsets.rs
shroudb-scroll-protocol/: Cargo.toml
shroudb-scroll-protocol/src/: commands.rs  dispatch.rs  lib.rs  response.rs
shroudb-scroll-server/: Cargo.toml
shroudb-scroll-server/src/: cipher_embedded.rs  cipher_remote.rs  config.rs  main.rs  tcp.rs
