[workspace]
members = [
    "shroudb-scroll-core",
    "shroudb-scroll-engine",
    "shroudb-scroll-protocol",
    "shroudb-scroll-client",
    "shroudb-scroll-server",
    "shroudb-scroll-cli",
]
default-members = ["shroudb-scroll-server"]
resolver = "3"

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.92"
license = "LicenseRef-Proprietary"
publish = ["shroudb"]

[workspace.dependencies]
shroudb-scroll-core = { path = "shroudb-scroll-core", version = "0.2.2", registry = "shroudb" }
shroudb-scroll-engine = { path = "shroudb-scroll-engine", version = "0.2.2", registry = "shroudb" }
shroudb-scroll-protocol = { path = "shroudb-scroll-protocol", version = "0.2.2", registry = "shroudb" }
shroudb-scroll-client = { path = "shroudb-scroll-client", version = "0.2.2", registry = "shroudb" }

shroudb-cipher-client = { version = "1.5.0", registry = "shroudb" }

shroudb-store = { version = "0.2.0", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.9.0", registry = "shroudb" }
shroudb-acl = { version = "0.2.0", registry = "shroudb" }
shroudb-crypto = { version = "0.1.4", registry = "shroudb" }
shroudb-storage = { version = "0.4.0", registry = "shroudb" }
shroudb-client = { version = "1.1.0", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.2.0", registry = "shroudb" }
shroudb-server-tcp = { version = "0.2.2", registry = "shroudb" }
shroudb-server-bootstrap = { version = "0.1.3", registry = "shroudb" }
shroudb-telemetry = { version = "0.1.0", registry = "shroudb" }
shroudb-client-common = { version = "0.2.0", registry = "shroudb" }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
toml = "1"
hex = "0.4"
base64 = "0.22"
postcard = { version = "1", features = ["alloc"] }
lru = "0.16"
rmp-serde = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
