[package]
name = "shroudb-scroll-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-scroll-core = { workspace = true }
shroudb-scroll-engine = { workspace = true }
shroudb-store = { workspace = true }
shroudb-acl = { workspace = true }
shroudb-protocol-wire = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
shroudb-storage = { workspace = true, features = ["testing"] }
shroudb-crypto = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
dashmap = { workspace = true }
uuid = { workspace = true }
