[package]
name = "shroudb-scroll-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-scroll"
path = "src/main.rs"

[dependencies]
shroudb-scroll-core = { workspace = true }
shroudb-scroll-engine = { workspace = true }
shroudb-scroll-protocol = { workspace = true }
shroudb-store = { workspace = true }
shroudb-acl = { workspace = true }
shroudb-crypto = { workspace = true }
shroudb-storage = { workspace = true }
shroudb-client = { workspace = true }
shroudb-cipher-client = { workspace = true }
shroudb-cipher-engine = { workspace = true }
shroudb-cipher-core = { workspace = true }
shroudb-protocol-wire = { workspace = true }
shroudb-server-tcp = { workspace = true }
shroudb-server-bootstrap = { workspace = true }
shroudb-engine-bootstrap = { workspace = true }
shroudb-telemetry = { workspace = true }
tokio-rustls = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
shroudb-scroll-client = { workspace = true }
shroudb-storage = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
uuid = { workspace = true }
